# EasyC

./: CMakeLists.txt
include/: EasyC.h
src/: EasyC.cpp  files.cpp
